--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,13 @@
 .encabezado {
 	position: fixed;
 	width: 100%;
+    background-color: #F05F40;
+    border-color: #F05F40;
 }
+.texto_encabezado{
+    color: #FFFFFF;
+}
+
 .mi_nombre {
 	color: #FFFFFF;
 	font-size: 45px;
@@ -24,6 +30,7 @@
 	
 }
 .bloque {
+    margin-top: -21px;
 	background-color: #F05F40;
 	width: 100%;
 	height: 300px; 
@@ -64,4 +71,8 @@ h3 {
 }
 .contactame {
 	text-align: center;
+}
+#button{
+    background-color: #F05F40;
+    border-color: #F05F40;
 }
